--- a/Snacklish Storyboards/View/Base.lproj/Main.storyboard
+++ b/Snacklish Storyboards/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bhk-0d-ps9">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -8,148 +8,23 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Input View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Snacklish-->
+        <scene sceneID="Vb3-2P-SY6">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="InputViewController" customModule="Snacklish_Storyboards" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController title="Snacklish" id="bhk-0d-ps9" customClass="SwiftUIHostingViewController" customModule="Snacklish" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6q9-OA-GQG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Snacklish" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nZz-ys-qJ7">
-                                <rect key="frame" x="0.0" y="44" width="414" height="37"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Your text here..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aKD-re-4aq">
-                                <rect key="frame" x="0.0" y="81" width="414" height="730"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="okY-IO-QOJ">
-                                <rect key="frame" x="0.0" y="811" width="414" height="51"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Snacklify">
-                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle0"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <segue destination="Dat-DI-Uop" kind="presentation" identifier="toOutput" id="GJN-b1-gnJ"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="5H3-d3-fiI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="okY-IO-QOJ" firstAttribute="top" secondItem="aKD-re-4aq" secondAttribute="bottom" id="3FV-e0-YAC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="okY-IO-QOJ" secondAttribute="bottom" id="3vL-Xe-bVt"/>
-                            <constraint firstItem="nZz-ys-qJ7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FKN-xT-t7u"/>
-                            <constraint firstItem="aKD-re-4aq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JJA-ke-iYP"/>
-                            <constraint firstItem="okY-IO-QOJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Y1x-ga-chE"/>
-                            <constraint firstItem="nZz-ys-qJ7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dIH-iO-cvh"/>
-                            <constraint firstItem="nZz-ys-qJ7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="eHx-fl-XKc"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aKD-re-4aq" secondAttribute="trailing" id="hZw-Ol-rbJ"/>
-                            <constraint firstItem="aKD-re-4aq" firstAttribute="top" secondItem="nZz-ys-qJ7" secondAttribute="bottom" id="n2h-DL-uIn"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="okY-IO-QOJ" secondAttribute="trailing" id="qPz-bB-tGk"/>
-                        </constraints>
                     </view>
-                    <connections>
-                        <outlet property="inputTextView" destination="aKD-re-4aq" id="2DM-Aj-mI6"/>
-                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ss6-6B-IlA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="73.913043478260875" y="93.75"/>
-        </scene>
-        <!--Output View Controller-->
-        <scene sceneID="50x-3R-9x1">
-            <objects>
-                <viewController id="Dat-DI-Uop" customClass="OutputViewController" customModule="Snacklish_Storyboards" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3jp-RW-hhe">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tU6-Fc-yBp">
-                                <rect key="frame" x="0.0" y="37" width="414" height="691"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJg-7M-OVu">
-                                <rect key="frame" x="0.0" y="768" width="414" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="C1j-Rt-dZW"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Done"/>
-                                <connections>
-                                    <action selector="dismissButtonPressed:" destination="Dat-DI-Uop" eventType="touchUpInside" id="X23-5w-buj"/>
-                                </connections>
-                            </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dDy-YU-hya">
-                                <rect key="frame" x="0.0" y="728" width="414" height="40"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PNG-BV-87r">
-                                        <rect key="frame" x="0.0" y="0.0" width="207" height="40"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="tinted" title="Copy"/>
-                                        <connections>
-                                            <action selector="copyButtonPressed:" destination="Dat-DI-Uop" eventType="touchUpInside" id="BRi-HZ-8Ga"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CNT-Zb-Edl">
-                                        <rect key="frame" x="207" y="0.0" width="207" height="40"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="tinted" title="Share"/>
-                                        <connections>
-                                            <action selector="shareButtonPressed:" destination="Dat-DI-Uop" eventType="touchUpInside" id="zEc-km-RV7"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="oMs-QN-zes"/>
-                                </constraints>
-                            </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Snacklish Translation" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gN8-hY-MM4">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="37"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="kNO-xr-V4a"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="gN8-hY-MM4" firstAttribute="top" secondItem="kNO-xr-V4a" secondAttribute="top" id="5dS-AH-7sv"/>
-                            <constraint firstItem="kNO-xr-V4a" firstAttribute="trailing" secondItem="eJg-7M-OVu" secondAttribute="trailing" id="6J0-47-dKj"/>
-                            <constraint firstItem="eJg-7M-OVu" firstAttribute="leading" secondItem="kNO-xr-V4a" secondAttribute="leading" id="Avk-ze-Wmu"/>
-                            <constraint firstItem="gN8-hY-MM4" firstAttribute="leading" secondItem="kNO-xr-V4a" secondAttribute="leading" id="Fd8-mm-DXw"/>
-                            <constraint firstItem="kNO-xr-V4a" firstAttribute="bottom" secondItem="eJg-7M-OVu" secondAttribute="bottom" id="Glz-dm-xTf"/>
-                            <constraint firstItem="dDy-YU-hya" firstAttribute="top" secondItem="tU6-Fc-yBp" secondAttribute="bottom" id="MYi-2O-VJH"/>
-                            <constraint firstItem="kNO-xr-V4a" firstAttribute="trailing" secondItem="gN8-hY-MM4" secondAttribute="trailing" id="Nuw-Od-hoR"/>
-                            <constraint firstItem="dDy-YU-hya" firstAttribute="leading" secondItem="kNO-xr-V4a" secondAttribute="leading" id="Smq-NL-N7l"/>
-                            <constraint firstItem="kNO-xr-V4a" firstAttribute="trailing" secondItem="tU6-Fc-yBp" secondAttribute="trailing" id="YDF-sn-fbz"/>
-                            <constraint firstItem="tU6-Fc-yBp" firstAttribute="top" secondItem="gN8-hY-MM4" secondAttribute="bottom" id="c2O-kq-j4z"/>
-                            <constraint firstItem="kNO-xr-V4a" firstAttribute="trailing" secondItem="dDy-YU-hya" secondAttribute="trailing" id="p4o-ka-N7L"/>
-                            <constraint firstItem="tU6-Fc-yBp" firstAttribute="leading" secondItem="kNO-xr-V4a" secondAttribute="leading" id="paw-wz-SdD"/>
-                            <constraint firstItem="dDy-YU-hya" firstAttribute="bottom" secondItem="eJg-7M-OVu" secondAttribute="top" id="pkE-NG-LdN"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="outputLabel" destination="tU6-Fc-yBp" id="nj0-qm-LqT"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OGv-AL-3uO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1052" y="94"/>
+            <point key="canvasLocation" x="74" y="-635"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
